# SONIA

./: .gitignore  MANIFEST.in  QmodelCDR3.py  QmodelCDR3_LPosLenAA.py  README.md  environment.yml  evaluate.py  evaluate_model.py  example_pipeline_script.py  generate.py  generate_sequences.py  infer.py  plot.py  plotting.py  pyproject.toml  sequence_generation.py  setup.py  sonia.py  sonia_leftpos_rightpos.py  sonia_length_pos.py  utils.py
default_models/human_B_heavy/length_pos/: features.tsv
default_models/human_T_alpha/length_pos/: model.h5
default_models/human_T_beta/: J_gene_CDR3_anchors.csv  V_gene_CDR3_anchors.csv  model_marginals.txt  model_params.txt
default_models/mouse_T_beta/left_right/: features.tsv  model.h5
docs/: requirements.txt
docs/source/: conf.py  directory.md  index.rst  modules.rst  modules.rst~  sonia.rst  sonia_tutorial.ipynb
examples/: data_seqs.txt  example_pipeline.py  gen_seqs.txt  sonia_tutorial.ipynb
selection/: L1_converge_history.tsv
sonia/: evaluate.py  evaluate_model.py  generate.py  infer.py  plotting.py  sequence_generation.py  sonia.py  sonia_leftpos_rightpos.py  sonia_length_pos.py  sonia_vjl.py  utils.py
sonia/default_models/human_B_heavy/: features.tsv  log.txt  model.h5
sonia/default_models/human_B_kappa/: J_gene_CDR3_anchors.csv  V_gene_CDR3_anchors.csv  features.tsv  log.txt  model.h5
sonia/default_models/human_B_lambda/: features.tsv  log.txt  model.h5
sonia/default_models/human_T_alpha/: features.tsv  log.txt  model.h5
sonia/default_models/human_T_beta/: features.tsv  log.txt  model.h5
sonia/default_models/mouse_T_alpha/: features.tsv  log.txt  model.h5
sonia/default_models/mouse_T_beta/: features.tsv  log.txt  model.h5
