[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sonia"
version = "0.2.2"
#dynamic = ["version"]
dependencies = ['numpy','tensorflow>=2.1.0','matplotlib','olga>=1.1.3','tqdm']
authors = [ {name = "Zachary Sethna"}, {name = "Giulio Isacchini", email = "giulioisac@gmail.com"}]
maintainers = [{name = "Giulio Isacchini", email = "giulioisac@gmail.com"}]
description = 'SONIA is a python 3.6 software developed to infer selection pressures on features of amino acid CDR3 sequences. The model can be used to calculate the probability of observing any sequence after selection and sample from the selected repertoire.'
readme = "README.md"
license = {file = "LICENSE"}
classifiers=[
            'Development Status :: 3 - Alpha',
            'Intended Audience :: Developers',
            'Intended Audience :: Healthcare Industry',
            'Intended Audience :: Science/Research',
            'Topic :: Scientific/Engineering :: Bio-Informatics',
            'Topic :: Scientific/Engineering :: Physics',
            'Topic :: Scientific/Engineering :: Medical Science Apps.',
            'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
            'Natural Language :: English',
            'Programming Language :: Python :: 3.6']
             
[project.urls]
Homepage = "https://github.com/statbiophys/SONIA"
Documentation = "https://sonia-package.readthedocs.io/en/latest/"

[project.scripts]
sonia-infer='sonia.infer:main'
sonia-generate='sonia.generate:main'
sonia-evaluate='sonia.evaluate:main'